# pyproject.toml

[tool.poetry]
name = "chube"
version = "0.1.0"
description = "Setting up fundraiser, easy."
authors = ["AbduLlah Levin <abdullahlevin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.68.0, <1.0.0"
uvicorn = ">=0.15.0, <1.0.0"
pydantic = ">=1.8.0, <2.0.0"
httpx = ">=0.21.0, <1.0.0"
aiohttp = ">=3.7.4, <4.0.0"    # For asynchronous HTTP requests
sqlalchemy = ">=1.4.0, <2.0.0" # For database access

[tool.poetry.dev-dependencies]
pytest = "^6.0"
factory_boy = "^3.2.0"
# Add any other testing dependencies you need

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
